--- a/index.html
+++ b/index.html
@@ -1413,7 +1413,7 @@
         <h2 class="events__heading">
           События
         </h2>
-        <ul class="events__list">
+<!--         <ul class="events__list">
           <li class="events__item">
             <picture class="events__img">
               <source srcset="img/events-1-768.png 0.5x" media="(max-width: 1000px)">
@@ -1513,16 +1513,32 @@
               <a class="events__item-link bg-focus" href="">Подробнее</a>
             </div>
           </li>
-        </ul>
+        </ul> -->
 
         <div class="events__swiper-container">
           <div class="events__swiper">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
+              <button class="events-swiper-button-prev">
+                <svg width="50" height="50" viewbox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M25 2.72191e-06C38.8071 2.11838e-06 50 11.1929 50 25C50 38.8071 38.8071 50 25 50C11.1929 50 -4.89256e-07 38.8071 -1.09278e-06 25C-1.69631e-06 11.1929 11.1929 3.32544e-06 25 2.72191e-06Z" fill="#ECECEC"/>
+                  <path d="M25 2.72191e-06C38.8071 2.11838e-06 50 11.1929 50 25C50 38.8071 38.8071 50 25 50C11.1929 50 -4.89256e-07 38.8071 -1.09278e-06 25C-1.69631e-06 11.1929 11.1929 3.32544e-06 25 2.72191e-06Z" stroke="black"/>
+                  <path d="M23.3333 16.6667L31.6667 25L23.3333 33.3333" stroke="black"/>
+                  </svg>
+              </button>
+              <button class="events-swiper-button-next">
+                <svg width="50" height="50" viewbox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M25 2.72191e-06C38.8071 2.11838e-06 50 11.1929 50 25C50 38.8071 38.8071 50 25 50C11.1929 50 -4.89256e-07 38.8071 -1.09278e-06 25C-1.69631e-06 11.1929 11.1929 3.32544e-06 25 2.72191e-06Z" fill="#ECECEC"/>
+                  <path d="M25 2.72191e-06C38.8071 2.11838e-06 50 11.1929 50 25C50 38.8071 38.8071 50 25 50C11.1929 50 -4.89256e-07 38.8071 -1.09278e-06 25C-1.69631e-06 11.1929 11.1929 3.32544e-06 25 2.72191e-06Z" stroke="black"/>
+                  <path d="M23.3333 16.6667L31.6667 25L23.3333 33.3333" stroke="black"/>
+                  </svg>
+              </button>
               <!-- Slides -->
               <div class="events__swiper-block swiper-slide">
                 <picture class="events__swiper-picture">
                   <source srcset="img/events-1-320.png" media="(max-width: 650px)">
+                  <source srcset="img/events-1-768.png" media="(max-width: 1000px)">
+                  <source srcset="img/events-1-1024.png" media="(max-width: 1024px)">
                   <img class="events__swiper-img" src="img/events-1.jpg" alt="">
                 </picture>
                 <div class="events__swiper-description">
@@ -1533,7 +1549,7 @@
                     Книжная гравюра в живом восприятии
                   </h3>
                   <p class="events__swiper-text">
-                     <br> Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили его брат Давид и сын Ридольфо.
+                    Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили его брат Давид и сын Ридольфо.
                   </p>
                   <a class="events__swiper-link" href="">Подробнее</a>
                 </div>
@@ -1541,6 +1557,8 @@
               <div class="events__swiper-block swiper-slide">
                 <picture class="events__swiper-picture">
                   <source srcset="img/events-2-320.png" media="(max-width: 650px)">
+                  <source srcset="img/events-2-768.png" media="(max-width: 1000px)">
+                  <source srcset="img/events-2-1024.png" media="(max-width: 1024px)">
                   <img class="events__swiper-img" src="img/events-2.jpg" alt="">
                 </picture>
                 <div class="events__swiper-description">
@@ -1559,6 +1577,8 @@
               <div class="events__swiper-block swiper-slide">
                 <picture class="events__swiper-picture">
                   <source srcset="img/events-3-320.png" media="(max-width: 650px)">
+                  <source srcset="img/events-3-768.png" media="(max-width: 1000px)">
+                  <source srcset="img/events-3-1024.png" media="(max-width: 1024px)">
                   <img class="events__swiper-img" src="img/events-3.jpg" alt="">
                 </picture>
                 <div class="events__swiper-description">
@@ -1577,6 +1597,8 @@
               <div class="events__swiper-block swiper-slide">
                 <picture class="events__swiper-picture">
                   <source srcset="img/events-4-320.png" media="(max-width: 650px)">
+                  <source srcset="img/events-4-768.png" media="(max-width: 1000px)">
+                  <source srcset="img/events-4-1024.png" media="(max-width: 1024px)">
                   <img class="events__swiper-img" src="img/events-4.jpg" alt="">
                 </picture>
                 <div class="events__swiper-description">
@@ -1595,6 +1617,8 @@
               <div class="events__swiper-block swiper-slide">
                 <picture class="events__swiper-picture">
                   <source srcset="img/events-5-320.png" media="(max-width: 650px)">
+                  <source srcset="img/events-5-768.png" media="(max-width: 1000px)">
+                  <source srcset="img/events-5-1024.png" media="(max-width: 1024px)">
                   <img class="events__swiper-img" src="img/events-5.jpg" alt="">
                 </picture>
                 <div class="events__swiper-description">
@@ -1829,8 +1853,9 @@
               <div class="swiper-wrapper">
                 <div class="swiper-slide swiper-block">
                   <picture class="editions__swiper-img">
+                    <source srcset="img/editions-1-320.png" media="(max-width: 576px)">
                     <source srcset="img/editions-1-1024.png" media="(max-width: 1024px)">
-                    <img src="img/editions-1.jpg" alt="">
+                    <img class="editions__swiper-image" src="img/editions-1.jpg" alt="">
                   </picture>
                   <h3 class="editions__swiper-heading">Искусство цвета</h3>
                   <span class="editions__swiper-price">620 руб</span>
@@ -1839,8 +1864,9 @@
                 </div>
                 <div class="swiper-slide swiper-block">
                   <picture class="editions__swiper-img">
+                    <source srcset="img/editions-2-320.png" media="(max-width: 576px)">
                     <source srcset="img/editions-2-1024.png" media="(max-width: 1024px)">
-                    <img src="img/editions-2.jpg" alt="">
+                    <img class="editions__swiper-image" src="img/editions-2.jpg" alt="">
                   </picture>
                   <h3 class="editions__swiper-heading">Типографика</h3>
                   <span class="editions__swiper-price">2 450 руб</span>
@@ -1849,8 +1875,9 @@
                 </div>
                 <div class="swiper-slide swiper-block">
                   <picture class="editions__swiper-img">
+                    <source srcset="img/editions-3-320.png" media="(max-width: 576px)">
                     <source srcset="img/editions-3-1024.png" media="(max-width: 1024px)">
-                    <img src="img/editions-3.jpg" alt="">
+                    <img class="editions__swiper-image" src="img/editions-3.jpg" alt="">
                   </picture>
                   <h3 class="editions__swiper-heading">Книга про буквы</h3>
                   <span class="editions__swiper-price">2 200 руб</span>
@@ -1859,8 +1886,9 @@
                 </div>
                 <div class="swiper-slide swiper-block">
                   <picture class="editions__swiper-img">
+                    <source srcset="img/editions-4-320.png" media="(max-width: 576px)">
                     <source srcset="img/editions-4-1024.png" media="(max-width: 1024px)">
-                    <img src="img/editions-4.jpg" alt="">
+                    <img class="editions__swiper-image" src="img/editions-4.jpg" alt="">
                   </picture>
                   <h3 class="editions__swiper-heading">Николай Ильин</h3>
                   <span class="editions__swiper-price">1 100 руб</span>
@@ -1869,8 +1897,9 @@
                 </div>
                 <div class="swiper-slide swiper-block">
                   <picture class="editions__swiper-img">
+                    <source srcset="img/editions-5-320.png" media="(max-width: 576px)">
                     <source srcset="img/editions-5-1024.png" media="(max-width: 1024px)">
-                    <img src="img/editions-5.jpg" alt="">
+                    <img class="editions__swiper-image" src="img/editions-5.jpg" alt="">
                   </picture>
                   <h3 class="editions__swiper-heading">Модульные сетки в граф...</h3>
                   <span class="editions__swiper-price">1 450 руб</span>
@@ -1879,8 +1908,9 @@
                 </div>
                 <div class="swiper-slide swiper-block">
                   <picture class="editions__swiper-img">
+                    <source srcset="img/editions-6-320.png" media="(max-width: 576px)">
                     <source srcset="img/editions-6-1024.png" media="(max-width: 1024px)">
-                    <img src="img/editions-6.jpg" alt="">
+                    <img class="editions__swiper-image" src="img/editions-6.jpg" alt="">
                   </picture>
                   <h3 class="editions__swiper-heading">Эволюция графических ст...</h3>
                   <span class="editions__swiper-price">3 200 руб</span>
@@ -1889,8 +1919,9 @@
                 </div>
                 <div class="swiper-slide swiper-block">
                   <picture class="editions__swiper-img">
+                    <source srcset="img/editions-7-320.png" media="(max-width: 576px)">
                     <source srcset="img/editions-7-1024.png" media="(max-width: 1024px)">
-                    <img src="img/editions-7.jpg" alt="">
+                    <img class="editions__swiper-image" src="img/editions-7.jpg" alt="">
                   </picture>
                   <h3 class="editions__swiper-heading">Искусство и визуальное в...</h3>
                   <span class="editions__swiper-price">2 200 руб</span>
@@ -1902,7 +1933,7 @@
               </div>
             </div>
           </div>
-          <div class="editions__mobile-block">
+          <!-- <div class="editions__mobile-block">
             <ul class="editions__mobile-list">
               <li class="editions__mobile-item">
                 <picture class="editions__mobile-pict">
@@ -2017,7 +2048,7 @@
                 <button class="editions__mobile-btn">Заказать</button>
               </li>
             </ul>
-          </div>
+          </div> -->
 
         </div>
       </div>
